# mockary

./: .gitignore  README.md  animals.json  config.ini  main.py  pyproject.toml  requirements.txt
mockary/: OpenAIRequest.py  config.ini  config.py  main.py
