[tool.poetry]
name = "mockary"
version = "0.1.0"
description = ""
authors = ["guilherme096 <guilherme.rosa60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
openai = "^1.35.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
